assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: #d9dcd6;
}

/* Header */
header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #2a607c;
    color: #ffffff;
}
header h1 {
    display: inline-block;
    font-size: 48px;
}
header h1 .seo {
    color: #d9dcd6;
}
header div {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 20px;
}
header div ul {
    list-style-type: none;
}
header div ul li {
    display: inline-block;
    margin-left: 25px;
}

a {
    color: #ffffff;
    text-decoration: none;
}

p {
    font-size: 16px;
}

.hero {
    height: 800px;
    width: 100%;
    margin-bottom: 25px;
    background-image: url("../images/digital-marketing-meeting.jpg");
    background-size: cover;
    background-position: center;
}

/* Main Content: Search Engine Optimization, Online Reputation Management, Social Media Marketing*/
.content {
    width: 75%;
    display: inline-block;
    margin-left: 20px;
}
.content-item {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
}
.content-item img {
    max-height: 200px;
}
.content-item  h2 {
    margin-bottom: 20px;
    font-size: 36px;
}
.float-left {
    float: left;
    margin-right: 25px;
}
.float-right {
    float: right;
    margin-left: 25px;
}


/* Side Bar: Lead Generation, Brand Awareness, and Cost Management */
.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: #2589bd;
}
.benefit-item {
    margin-bottom: 32px;
    color: #ffffff;
}
.benefit-item h3 {
    margin-bottom: 10px;
    text-align: center;
}
.benefit-item img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}


.footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}

.footer h2 {
    font-size: 20px;
}

